network colors and legends

--- a/src/app/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/components/analysis-panel/analysis-panel.component.html
@@ -136,9 +136,46 @@
           <div class="network center image1" #network>
             <button class="button is-loading center">Loading</button>
           </div>
-          <div class="image2">
-            <img src="assets/ll2.png" width="200px"/>
+
+          <!-- START Legend -->
+          <div class="legend">
+            <table>
+              <tr>
+                <td><span class="seed-node"></span></td>
+                <td>&nbsp;Seed Gene</td>
+              </tr>
+              <tr>
+                <td><span class="node"></span></td>
+                <td>&nbsp;Non Seed Gene</td>
+              </tr>
+              <tr>
+                <td><span class="seed-cancer-node"></span></td>
+                <td>&nbsp;Seed Cancer Gene</td>
+              </tr>
+              <tr>
+                <td><span class="cancer-node"></span></td>
+                <td>&nbsp;Seed Cancer Gene</td>
+              </tr>
+              <tr>
+                <td><span class="selected-cancer-node"></span></td>
+                <td>&nbsp;Selected Node</td>
+              </tr>
+              <tr>
+                <td><span class="approved-drug"></span></td>
+                <td>&nbsp;Approved Drug</td>
+              </tr>
+              <tr>
+                <td><span class="in-trial-drug"></span></td>
+                <td>&nbsp;In Trial Drug</td>
+              </tr>
+              <tr>
+                <td><span class="non-approved-drug"></span></td>
+                <td>&nbsp;Unapproved Drug</td>
+              </tr>
+            </table>
           </div>
+          <!-- END Legend -->
+
         </div>
         <footer class="card-footer toolbar">
           <div class="field">
