network colors and legends

--- a/src/scaffold.scss
+++ b/src/scaffold.scss
@@ -15,3 +15,6 @@ $network-non-seed-cancer-gene-color: #5b005b;
 $network-selected-border-color: #ffa500;
 
 $legend-circle-size: 35px;
+$legend-rectangle-height: 25px;
+$legend-rectangle-width: 35px;
+$legend-rectangle-radius: 5px;
