network colors + legends + dynamic drug loading into drug target graph.

--- a/src/app/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/components/analysis-panel/analysis-panel.component.html
@@ -166,7 +166,7 @@
               </tr>
               <tr>
                 <td><span class="in-trial-drug"></span></td>
-                <td>&nbsp;In Trial Drug</td>
+                <td>&nbsp;Drug in Trial</td>
               </tr>
               <tr>
                 <td><span class="non-approved-drug"></span></td>
