--- a/src/app/components/info-tile/info-tile.component.html
+++ b/src/app/components/info-tile/info-tile.component.html
@@ -26,7 +26,7 @@
       <b><span>Protein Name:</span></b>
       {{ wrapper.data.proteinName }}
     </p>
-    <p>
+    <p *wrapper.data.interactions>
       <b><span>Node Degree:</span></b>
       {{ wrapper.data.interactions.length }}
     </p>
@@ -79,7 +79,7 @@
       <b><span>Protein Name:</span></b>
         {{ wrapper.data.proteinName }}
     </p>
-    <p>
+    <p *ngIf="wrapper.data.interactions">
       <b><span>Node Degree:</span></b>
       {{ wrapper.data.interactions.length }}
     </p>
@@ -111,9 +111,9 @@
       {{ wrapper.data.name }}
       <span class="icon is-small"><i class="fas fa-capsules"></i></span>
     </p>
-    <p>
+    <p *ngIf="wrapper.data.dbId">
       <b>DrugBank ID: </b>
-      <a href="https://www.drugbank.ca/drugs/{{ wrapper.data.db_id }}" target="_blank"> {{ wrapper.data.db_id }}</a>
+      <a href="https://www.drugbank.ca/drugs/{{ wrapper.data.dbId }}" target="_blank"> {{ wrapper.data.dbId }}</a>
     </p>
     <p *ngIf="wrapper.data.status === 'unapproved' ">
       <b>Status: </b> Unapproved
@@ -125,13 +125,16 @@
     <p *ngIf="wrapper.data.inTrial">
       <b>In trial(s) </b> <span class="icon is-small"><i class="fas fa-check"></i></span>
     </p>
+    <p *ngIf="wrapper.data.inCancernet">
+      <b>In Cancernet </b> <span class="icon is-small"><i class="fas fa-check"></i></span>
+    </p>
     <div *ngIf="wrapper.data.inTrial && wrapper.data.links.length > 0" class="list">
       <div *ngFor="let link of wrapper.data.links" class="list-item">
         <a [href]="link" target="_blank">{{beautify(link)}}</a>
       </div>
       <small class="list-item"><i>Links provided by WHO</i></small>
     </div>
-    <p>
+    <p *ngIf="wrapper.data.interactions">
       <b><span>Node Degree:</span></b>
       {{ wrapper.data.interactions.length }}
     </p>
