legend layout changes

--- a/src/app/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/components/analysis-panel/analysis-panel.component.html
@@ -141,19 +141,19 @@
           <div class="legend">
             <table>
               <tr>
+                <td><span class="node"></span></td>
+                <td>&nbsp;Gene</td>
+              </tr>
+              <tr>
                 <td><span class="seed-node"></span></td>
                 <td>&nbsp;Seed Gene</td>
               </tr>
               <tr>
-                <td><span class="node"></span></td>
-                <td>&nbsp;Non Seed Gene</td>
+                <td><span class="cancer-node"></span></td>
+                <td>&nbsp;Cancer Gene</td>
               </tr>
               <tr>
                 <td><span class="seed-cancer-node"></span></td>
-                <td>&nbsp;Seed Cancer Gene</td>
-              </tr>
-              <tr>
-                <td><span class="cancer-node"></span></td>
                 <td>&nbsp;Seed Cancer Gene</td>
               </tr>
               <tr>
