--- a/src/app/components/dataset-tile/dataset-tile.component.html
+++ b/src/app/components/dataset-tile/dataset-tile.component.html
@@ -13,7 +13,7 @@
     <div class="column is-narrow">
       <div *ngIf="selectedDataset" class="info">
 
-        <div *ngIf="selectedDataset.link"><a href="{{selectedDataset.link}}"><i class="fas fa-link"></i> Source</a></div>
+        <div *ngIf="selectedDataset.link"><a href="{{selectedDataset.link}}" target="_blank"><i class="fas fa-link"></i> Source</a></div>
         <div *ngIf="selectedDataset.count">Number of genes: {{selectedDataset.count}}</div>
 
       </div>
