--- a/src/styles.scss
+++ b/src/styles.scss
@@ -345,4 +345,14 @@ body {
   }
 }
 
+.loadingOverlay{
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
 
+#analysis-content{
+  position: relative;
+  height: 100%;
+}
