--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -87,7 +87,6 @@
               <div class="card-image" id="canvas-content">
                 <div class="parent">
                   <div class="network center image1" #network>
-                    <button class="button is-loading center" alt="loading...">Loading</button>
                   </div>
                   <div class="image2">
                     <!-- <img src="assets/leg1.png" width="180px"/> -->
@@ -394,7 +393,7 @@
       </div>
       <!-- Filter Network END -->
 
-      <div class="card bar-large">
+      <!--<div class="card bar-large">
         <header class="card-header">
           <p class="card-header-title">
           <span class="icon">
@@ -478,7 +477,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
 
       <div class="card bar-large">
         <header class="card-header">
@@ -486,7 +485,7 @@
           <span class="icon">
             <i class="fas fa-flask" aria-hidden="true"></i>
           </span>
-            Advanced Analysis
+            Analysis
             <span class="icon has-tooltip-right has-text-black has-text-weight-normal is-size-6"
                   data-tooltip="Run a sophisticated analysis based on selected nodes">
               <i class="fas fa-info-circle"></i>
@@ -504,6 +503,15 @@
           <div class="card-content">
             <div class="field">
               <div class="control">
+
+                <div class="column has-text-centered">
+                  <div class="analysis-option has-text-weight-bold" [ngClass]="{'selected': analysis.getCount() > 0 }">
+                    <span>1. Select Genes
+                      <i class="fa fa-check" *ngIf="analysis.getCount() > 0"></i>
+                    </span>
+                  </div>
+                </div>
+
                 <button (click)="analysisDialogTarget = 'drug-target'; showAnalysisDialog = true; closeSummary();"
                         class="button is-primary is-fullwidth has-tooltip"
                         data-tooltip="Find drug targets for the selected genes."
