removing 'current data level' and adding gene filtering based on tissue'

--- a/src/app/dialogs/launch-analysis/launch-analysis.component.html
+++ b/src/app/dialogs/launch-analysis/launch-analysis.component.html
@@ -507,7 +507,7 @@
       selectedDataset,
       selectedGeneInteractionDataset,
       selectedDrugInteractionDataset,
-      selectedCancerTypeItems
+      currentCancerTypeItems
       ); close()" class="button is-primary has-tooltip"
               data-tooltip="Run the analysis."
               [disabled]="!analysis.canLaunchTask()">
