KMP drug target search working

--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -10,7 +10,12 @@
   >
   </app-launch-analysis>
 
-  <app-custom-genes [(show)]="showCustomGenesDialog" [visibleNodes]="currentViewNodes">
+  <app-custom-genes
+    [(show)]="showCustomGenesDialog"
+    [visibleNodes]="currentViewNodes"
+    [currentCancerDataset]="currentDataset"
+    [currentCancerTypeItems]="currentCancerTypeItems"
+  >
   </app-custom-genes>
 
   <app-add-expressed-genes [(show)]="showThresholdDialog"
