adding disease gene dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,10 @@
           <span class="icon"><i class="fa fa-feather"></i></span>
           <span>Cite</span>
         </a>
+        <a routerLink="/download" routerLinkActive="is-active" class="navbar-item is-hoverable">
+          <span class="icon"><i class="fa fa-download"></i></span>
+          <span>Download</span>
+        </a>
         <a routerLink="/about" routerLinkActive="is-active" class="navbar-item is-hoverable">
           <span class="icon"><i class="fa fa-question"></i></span>
           <span>About</span>
