--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,5 +1,9 @@
 <div class="content">
-    <button type="button" class="button is-primary" (click)="onClickEventReceived()">
+    <button type="button"
+            class="button is-primary"
+            (click)="onClickEventReceived()"
+            [disabled]="disabled"
+    >
       <i *ngIf="icon" class="{{ icon }}"></i> &nbsp;
 
       {{ buttonText }}
