--- a/src/app/pages/explorer-page/explorer-page.component.html
+++ b/src/app/pages/explorer-page/explorer-page.component.html
@@ -300,7 +300,8 @@
                   <p class="heading">
                     Genes
                     <span class="icon has-tooltip-right has-text-black is-lowercase has-text-weight-normal is-size-6"
-                          data-tooltip="Only subgroup of genes is shown for performance reasons">
+                          data-tooltip="Only subgroup of genes is shown for performance reasons.
+                          For the overview, just genes adjacent to cancer driver genes are considered">
                     <i class="fas fa-info-circle"></i>
                     </span>
                   </p>
