--- a/src/styles.scss
+++ b/src/styles.scss
@@ -328,7 +328,7 @@ body {
       height: $legend-rectangle-height;
       display: inline-block;
     }
-    .in-trial-drug{
+    .cancer-drug{
       width: 0;
       height: 0;
       border-left: calc(#{$legend-circle-size} / 2) solid transparent;
